# SokuTeX

./: .gitignore  Cargo.toml  PDFiumConfig.cmake  autosave.tex
skills/creating-skills/: SKILL.md
skills/designing-frontend/: SKILL.md
skills/developing-features/: SKILL.md
skills/developing-features/resources/: code-architect.md  code-explorer.md  code-reviewer.md
src/: autocomplete.rs  bib.rs  compiler.rs  compiler_daemon.rs  config.rs  dependencies.rs  editor.rs  io.rs  latexmk.rs  main.rs  palette.rs  pdf_renderer.rs  perf.rs  renderer.rs  shader.wgsl  synctex.rs  syntax.rs  test_mupdf.rs  ui.rs  vfs.rs  watcher.rs
test_files/: beamer_slides.tex  math_stress.tex  simple.tex
test_files/multifile/: main.tex  references.bib
test_files/multifile/sections/: introduction.tex  methodology.tex  preamble.tex  results.tex
