[package]
name = "sokutex"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
wgpu = "0.19"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
# tectonic = "0.15" 
ropey = "1.6"
mupdf = "0.6"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
egui = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"
dashmap = "5.5"
md5 = "0.7"
notify = "6.1.1"
